# navigator

./: Cargo.toml  README.md  test.txt
src/: decode.rs  main.rs  validate.rs
