[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cli
anyhow = "1.0"
clap = { version = "4.0.32", features = ["derive"] }
ethers = "1.0.0"
tokio = { version = "1.23.0", features = ["full"] }
hex = "0.4.3"
